# akareko

./: .gitignore  Cargo.toml  Plan  README.md  diesel.toml  expanded.rs  flake.nix
.cargo/: config.toml
benches/: db_benchmark.rs
byteable-derive/src/: lib.rs
migrations/sqlite/: init.sql
migrations/sqlite/2026-02-25-210502-0000_initialize_database/: up.sql
src/: config.rs  errors.rs  helpers.rs  lib.rs  main.rs
src/clients/: mod.rs
src/clients/mangadex/: mod.rs
src/db/: mod.rs  schema.rs
src/db/comments/: mod.rs  surreal.rs
src/db/event/: mod.rs
src/db/follow_index/: mod.rs  surreal.rs
src/db/index/: content.rs  metadata.rs  mod.rs  sqlite.rs  surreal.rs  tags.rs
src/db/schedule/: mod.rs
src/db/user/: mod.rs  sqlite.rs  surreal.rs
src/hash/: keys.rs  mod.rs
src/helpers/: bloom_filter.rs  byteable.rs  lifo.rs  serde_byteable.rs
src/server/: mod.rs
src/server/client/: mod.rs  pool.rs
src/server/handler/: macros.rs  mod.rs
src/server/handler/events/: sync_events.rs
src/server/handler/index/: exchange_content.rs  get_all_indexes.rs  get_contents.rs  get_indexes.rs  mod.rs
src/server/handler/post/: get_posts_by_topic.rs
src/server/handler/relay/: post_content.rs
src/server/handler/users/: get_users.rs  mod.rs  who.rs
src/server/protocol/: mod.rs
src/types/: keys.rs  mod.rs  string.rs  timestamp.rs  topic.rs
src/ui/: app_manager.rs  icons.rs  message.rs  mod.rs  theme.rs  tray.rs
src/ui/components/: circular_progress_bar.rs  content_entry.rs  layout_button.rs  mod.rs  modal.rs  toast.rs
src/ui/components/modal/: add_who.rs
src/ui/old/components/: mod.rs  modal.rs  sidebar.rs  toast.rs
src/ui/old/components/modal/: add_who.rs
src/ui/old/style/: mod.rs  theme.rs
src/ui/old/views/: database_viewer.rs  image_viewer.rs  novel.rs  post.rs  settings.rs
src/ui/queries/: add_torrent.rs  fetch_contents.rs  fetch_indexes.rs  fetch_torrent_status.rs  mod.rs  update_content_progress.rs
src/ui/queries/content/: fetch_mangadex_chapters.rs  update_content_count.rs
src/ui/queries/follow/: follow_content.rs  get_follow_content.rs
src/ui/queries/index/: fetch_cover.rs
src/ui/queries/torrent/: fetch_torrent_watchers.rs
src/ui/router/: home.rs  mod.rs  settings.rs  torrents.rs
src/ui/router/manga/: add_manga.rs  add_manga_chapter.rs  chapter_viewer.rs  config.rs  manga.rs  manga_list.rs
src/ui/style/: mod.rs
src/ui/views/: add_chapter.rs  add_novel.rs  database_viewer.rs  home.rs  image_viewer.rs  mod.rs  novel.rs  novel_list.rs  post.rs  settings.rs  user_list.rs
