[package]
name = "akareko"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.50.0", features = [
    "sync",
    "rt-multi-thread",
    "macros",
    "net",
] }
julian = "0.7.1"

serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.141"

toml = "0.9.2"
url = "2.5.4"

surrealdb = { version = "3.0.1", features = ["kv-surrealkv", "kv-mem"] }
surrealdb-types = "3.0.1"
surrealdb-core = "3.0.1"


async-trait = "0.1.89"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
rand = "0.8.0"
unicode-normalization = "0.1.24"
thiserror = "2.0.16"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
    "local-time",
] }
time = "0.3.41"
sha2 = "0.10.9"
base64 = "0.22.1"
zeroize = { version = "1.8.1", features = ["zeroize_derive"] }

dirs = "6.0.0"
futures = { version = "0.3.31", features = [] }

tokio-util = { version = "0.7.16", features = ["compat", "io", "io-util"] }

yosemite = "0.5.0"

config = "0.15.16"
data-encoding = "2.9.0"
paste = "1.0.15"
byteable-derive = { path = "./byteable-derive" }
cxx = "1.0.186"
bitflags = "2.9.4"
anawt = { git = "https://github.com/zko-jin/anawt.git", branch = "develop", optional = true }
bytes = "1.10.1"
error_set = "0.9.0"
rclite = "0.3.0"

const_format = "0.2.35"
image = "0.25.9"
async_zip = { version = "0.0.18", features = ["tokio", "tokio-fs", "zstd", "lzma", "xz", "bzip2", "deflate"]}
serde_bytes = "0.11.19"
xorf = "0.12.0"
fastbloom = { version = "0.16.0", features = ["serde"] }
num_enum = "0.7.5"
strum = "0.28.0"
strum_macros = "0.28.0"
clap = { version = "4.5.60", features = ["derive"] }
freya = { git = "https://github.com/marc2332/freya.git", branch = "feat/hotreload", features = ["router", "query", "tray", "radio", "calendar", "sdk"] }
blocking = "1.6.2"
freya-skia-safe = "0.96.0"
reqwest = "0.13.2"
mangadex-api =  { version = "4.2.1", features = ["utils"] }
uuid = "1.23.0"
mangadex-api-types-rust = "1.0.1"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio"] }

[[bench]]
name = "db_benchmark"
harness = false

[features]
default = ["surrealdb", "bin"]
bin = ["dep:anawt"]
lto = ["anawt/lto"]
surrealdb = []
sqlite = ["diesel"]
diesel = []
dev = ["freya/devtools", "freya/hotreload"]

[profile.release]
lto = "fat"
strip = true
opt-level = 3
panic = "abort"
codegen-units = 1
features = ["lto"]

[lib]
name = "akareko_lib"
path = "src/lib.rs"

[[bin]]
name = "akareko"
path = "src/main.rs"
required-features = ["bin"]
